ghost/admin/app/styles/layouts/editor.css
/* Editor /ghost/editor/
/* ---------------------------------------------------------- */

.editor-options .dropdown-menu {
    top: 35px;
    right: 0;
    left: auto;
}


/* Tags input CSS (TODO: needs some revision)
/* ------------------------------------------------------ */
.tags-input-list {
    display: flex;
    flex-wrap: wrap;
    margin: 0;
    padding: 0;
    list-style-type: none;
}

.tags-input-list li {
    flex: 1 0 auto;
}

.label-tag {
    margin-right: 0.3em;
    padding: 0.2em 0.6em 0.3em;
    background-color: var(--darkgrey);
    border-radius: 0.25em;
    color: var(--lightgrey);
    text-align: center;
    font-weight: 300;
}

.label-tag.highlight {
    background: var(--midgrey);
    color: #fff;
}

.tag-input {
    margin-top: 5px;
    border: none;
    font-weight: 300;
    cursor: default;
}

.tag-input:focus {
    outline: 0;
}

.publish-bar-actions {
    flex: 1 0 auto;
    align-self: auto;
    display: flex;
    text-align: right;
}

.post-settings {
    position: relative;
    display: inline-block;
    padding: 15px 0 15px 15px;
    color: var(--midgrey);
    transition: all 0.15s ease-out 0s;
    line-height: 0;
    z-index: 1000;
}

.post-settings:hover,
.post-settings.active {
    color: var(--darkgrey);
}

.post-settings svg {
    width: 16px;
    height: 16px;
    fill: var(--midgrey);
}

.post-settings:hover svg,
.post-settings.active svg {
    fill: var(--darkgrey);
}

.post-settings-menu .dropdown-menu {
    top: auto;
    right: 100%;
    bottom: 100%;
    left: auto;
}

.post-view-link {
    position: absolute;
    top: 1px;
    right: 0;
    font-size: 1.3rem;
}

.post-view-link svg {
    display: inline;
    height: 10px;
    width: auto;
    fill: var(--blue);
}


/* Post settings meta
/* ---------------------------------------------------------- */

/* Google Imitation */
.seo-preview {
    font-family: Arial, sans-serif;
}

.seo-preview-title {
    color: #1e0fbe;
    text-overflow: ellipses;
    word-wrap: break-word;
    font-size: 1.8rem;
    line-height: 2.16rem;

    -webkit-text-overflow: ellipsis;
}

.seo-preview-link {
    margin: 1px 0 2px 0;
    color: #006621;
    word-wrap: break-word;
    font-size: 1.3rem;
    line-height: 1.6rem;
}

.seo-preview-description {
    color: #545454;
    word-wrap: break-word;
    font-size: 1.3rem;
    line-height: 1.4;
}



/* NEW editor
/* ---------------------------------------------------------- */

.gh-main > section.gh-editor-fullscreen {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 1000;
    background-color: white;
}

.gh-editor-header {
    position: absolute;
    top: 0;
    right: 0;
    left: 0;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 30px;
    height: 80px;
}
@media (max-width: 750px) {
    .gh-editor-header { padding: 0 4vw; }
}

.gh-editor-header-small {
    height: 43px;
    padding: 0;
    padding-left: 15px;
    background: #fff;
    border-bottom: var(--lightgrey) 1px solid;
    z-index: 100;
}

.gh-editor-header-small .gh-publishmenu {
    line-height: 0;
}

.gh-editor-header-small .post-settings {
    padding: 13px 15px;
}

.gh-editor-status {
    color: var(--midgrey);
    font-weight: 300;
    font-size: 1.3rem;
}

.gh-editor-container {
    position: absolute;
    overflow-y: auto;
    padding: 10vw 4vw;
    width: 100%;
    height: 100%;
    z-index: 0;
}

.gh-editor-inner {
    margin: 0 auto;
    max-width: 760px;
    height: 100%;
}

.gh-editor-title {
    display: block;
    width: 100%;
    min-height: auto;
    margin-bottom: 2vw;
    border: none;
    letter-spacing: 0.8px;
    font-weight: bold;
    font-size: 3.2rem;
    line-height: 1.15em;
    color: var(--darkgrey);

}

.gh-editor-wordcount {
    position: fixed;
    bottom: 0px;
    padding:10px;
 }

@media (max-width: 1200px) {
    .gh-editor-wordcount {
        display: none;
    }
}

/* SimpleMDE editor
/* ---------------------------------------------------------- */

.gh-editor-title {
    padding: 0;
}

.gh-editor-title:placeholder {
    font-weight: bold;
}

.gh-markdown-editor {
    position: relative;
    width: 100%;
    height: 100vh;
    overflow-y: auto;
    z-index: 0;
}

.gh-markdown-editor-pane,
.gh-markdown-editor-preview {
    padding: 10vw 4vw;
}

.gh-markdown-editor-side-by-side .gh-markdown-editor-pane,
.gh-markdown-editor-side-by-side .gh-markdown-editor-preview {
    padding: 4vw;
}

.gh-markdown-editor-side-by-side {
    display: flex;
    flex-direction: row;
    overflow-y: hidden;
    margin-top: 43px;
}

.gh-markdown-editor-side-by-side .gh-markdown-editor-pane,
.gh-markdown-editor-side-by-side .gh-markdown-editor-preview {
    width: 50%;
    height: 100%;
    overflow-y: auto;
}

.gh-markdown-editor-preview {
    border-left: var(--lightgrey) 1px solid;
}

.gh-markdown-editor-preview a {
    text-decoration: underline;
}

.gh-editor-footer {
    height: 48px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    border-top: var(--lightgrey) 1px solid;
}

@media (max-width: 800px) {
    .gh-editor-footer { display: none; }
}

.gh-editor-footer .editor-toolbar {
    border: none;
    border-radius: 0;
    background-color: #fff;
    opacity: 1;
}

.gh-editor-footer .editor-toolbar:before,
.gh-editor-footer .editor-toolbar:after {
    content: none;
}

.gh-editor-footer .editor-toolbar a:focus {
    outline: none;
}

.gh-editor .CodeMirror {
    padding: 0;
    overflow: visible;
}

/* fix visible scrollbars when OSX is set to show them */
.gh-editor .CodeMirror-scroll {
    overflow: visible !important;
}

/* prevent markdown content showing after the preview if the preview is shorter */
.gh-editor-preview .CodeMirror-scroll {
    display: none;
}

.gh-editor .gh-editor-title,
.gh-editor .CodeMirror-wrap {
    max-width: 760px;
    margin-left: auto;
    margin-right: auto;
    border: none;
}

.gh-editor .CodeMirror pre {
    padding: 0;
    font-family: “Consolas”, monaco, monospace;
    font-size: 1.6rem;
    color: color(var(--darkgrey) l(+5%));
}

@media (max-width: 960px) {
    .gh-editor .CodeMirror pre {
        font-size: 1.4rem;
    }
}

.gh-editor .CodeMirror .cm-strong {
    color: var(--darkgrey);
}

.gh-editor .CodeMirror .cm-url {
    text-decoration: underline;
}

.gh-editor .editor-preview {
    height: auto;
    margin-top: 4px;
    padding: 0;
    background-color: #fff;
}

.gh-editor .editor-preview,
.gh-markdown-editor-preview {
    font-family: Georgia, Times, Serif;
    font-size: 1.9rem;
    color: color(var(--darkgrey) l(+5%));
}

.gh-markdown-editor-preview-title {
    margin-bottom: 2vw;
}

.gh-editor-drop-target,
.gh-editor-image-upload {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    border: 2px solid blue;
    content: '';
    z-index: 9999;
    background-color: rgba(255,255,255,0.6);
}

.gh-editor-drop-target .drop-target-message {
    padding: 1em;
    background-color: #fff;
    border-radius: 1em;
}

.gh-editor-image-upload.-error {
    border: 2px solid red;
}

.gh-editor-image-upload-content {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    padding: 1em;
    background-color: #fff;
    border-radius: 1em;
    max-width: 80%;
}

.gh-editor-image-upload .gh-progress-container-progress {
    width: 100%;
}

/* TODO: need a way to make stroke + fill global without causing issues with certain icons */
.gh-editor-image-upload .gh-btn-grey svg path {
    stroke: color(var(--darkgrey) l(+15%));
}

.editor-toolbar a.disabled,
.gh-editor-preview .editor-toolbar a:not(.no-disable) {
    pointer-events: none;
    color: lightgray !important;
}

.editor-toolbar a.disabled:hover {
    border: none;
}

.editor-toolbar .fa-check {
    position: relative;
    vertical-align: bottom;
}
.editor-toolbar .fa-check:before {
    font-size: 14px;
    position: absolute;
    line-height: 14px;
    right: 3px;
    bottom: 4px;
}

.editor-toolbar .fa-check:after {
    content: 'abc';
    font-family: var(--font-family);
    position: absolute;
    left: 4px;
    font-size: 9px;
    top: 6px;
    line-height: 9px;
}

.editor-statusbar .words:before {
    content: "Words: ";
}

.CodeMirror .CodeMirror-code .cm-link {
    color: var(--blue);
    text-decoration: none;
}

.editor-statusbar {
    padding: 8px 15px;
    color: var(--midgrey);
}

.editor-toolbar i.separator {
    border-left: color(var(--lightgrey) l(-3%)) 1px solid;
    border-right: none;
}

.editor-toolbar a.active,
.editor-toolbar a:hover {
    border-color: color(var(--lightgrey) l(-5%));
}

.CodeMirror .CodeMirror-selected {
    background: color(var(--blue) lightness(+30%));
}

