🎨 fix misalignment between view site and editor toolbar borders
no issue
- force editor toolbar to a fixed height, previously flexbox behaviour meant that it would squash the space above/below the buttons at smaller screen heights

--- a/ghost/admin/app/styles/layouts/editor.css
+++ b/ghost/admin/app/styles/layouts/editor.css
@@ -282,7 +282,8 @@
 }
 
 .gh-editor-footer {
-    height: 48px;
+    height: 46px;
+    min-height: 46px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
